--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-cache-controller": "^1.1.0",
     "gpt4all": "^4.0.0",
     "xml2js": "^0.6.2"
   }
